# quantu-app

./: .dockerignore  .env.example  .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  Dockerfile  LICENSE  README.md  TODOS.md  electron.cjs  electron.dev.cjs  jest.config.cjs  package-lock.json  package.json  playwright.config.js  svelte.config.cjs  svelte.config.js  svelte.config.test.cjs  tsconfig.json  vite.config.js  vitest.config.ts
.github/workflows/: build.yml  deploy.yml  desktop.yml  release.yml  test.yml  testing.yml
electron/: main.js  package.json
helm/aicacia-books/: Chart.yaml  README.md  values-local.yaml  values.yaml
helm/quantu/: Chart.yaml  README.md  values.yaml
helm/quantu-app/: Chart.yaml  README.md  values.yaml
helm/quantu-app-ui/: Chart.yaml  values.yaml
helm/quantu-journal-ui/: README.md  values.yaml
intrastructure/: docker-compose.yaml
mongo/: docker-compose.yaml
prisma/: schema.prisma  seed.ts
prisma/seed_data/: departments.csv
queries/: changeTypes.mongodb
scripts/: build.cjs  generators.cjs  pkg.cjs  prebuild.cjs  replaceInFile.cjs  replaceSsh.cjs  runCommand.cjs
src/: app.d.ts  app.html  app.scss  electron.cjs  global.d.ts  hooks.client.ts  hooks.server.ts  hooks.ts  quill.scss  service-worker.ts  theme.scss
src-tauri/: Cargo.toml  build.rs  index.html  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: AbortController.ts  AppLayout.svelte  Assets.svelte  AssetsModal.svelte  Book.svelte  BookMetaRow.svelte  Books.svelte  ClickAway.svelte  quill.ts  (+35 more)
static/: manifest.json  robots.txt
tests/: test.spec.js
(+1014 files in other folders)
