[package]
name = "quantu"
version = "0.1.0"
description = "Quantu App"
authors = [ "nathanfaucett@gmail.com" ]
license = ""
repository = ""
default-run = "quantu"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11" }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "quantu"
path = "src/main.rs"
