[package]
name = "quantu"
version = "0.1.0"
description = "Quantu App"
authors = [ "nathanfaucett@gmail.com" ]
license = "MIT/Apache-2.0"
repository = "https://github.com/quantu-app/quantu-app"
default-run = "quantu"
edition = "2021"
rust-version = "1.56"
build = "build.rs"

[[bin]]
name = "quantu"
path = "src/main.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
tauri-utils = "1.0.0-beta.3"
url = "2.2"
port_scanner = "0.1"
tokio = { version = "1.16", features = [ "rt", "rt-multi-thread", "sync", "fs", "io-util", "macros" ] }

[build-dependencies]
tauri-build = { version = "1.0.0-beta.4", features = [ "codegen" ] }
